<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/decreaseTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/_minus"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="@+id/increaseTeamB"
        app:layout_constraintTop_toBottomOf="@+id/increaseTeamB" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="21dp"
        android:layout_marginEnd="7dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toStartOf="@+id/decreaseTeamB"
        app:layout_constraintTop_toBottomOf="@+id/decreaseTeamB" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="16dp"
        android:text="@string/score_increase_by"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="@+id/Team_scoreB"
        app:layout_constraintStart_toStartOf="@+id/Team_scoreA" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/Team_A"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="#000000"

            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/decreaseTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:text="@string/_minus"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/increaseTeamA"
        app:layout_constraintTop_toBottomOf="@+id/increaseTeamA" />

    <Button
        android:id="@+id/increaseTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_plus"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Team_scoreB"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/increaseTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/_plus"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Team_scoreA"
        app:layout_constraintTop_toBottomOf="@+id/Team_scoreA" />

    <TextView
        android:id="@+id/Team_scoreB"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/increaseTeamB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/Team_scoreA"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Team_scoreB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Team_scoreB" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:text="@string/Team_B"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Team_scoreB"
        app:layout_constraintStart_toStartOf="@+id/Team_scoreB"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>